package RealmAndTime;

public class LocalTime {
    public int day;
    public int hour;
    public int minute;
    public LocalTime(int day, int hour, int minute){
        this.day = day;
        this.minute = minute;
        this.minute = hour;
    }
}
