package ViewsAndTimelines;

public class WeekView extends TimelineView{
    public void display(){
        // assume print stuff about campaign
        System.out.println("This is a campaign, week view");
    }
}
