package ViewsAndTimelines;

public class YearView extends TimelineView{
    public void display(){
        // assume print stuff about campaign
        System.out.println("This is a campaign, Year view");
    }
}
