package VisibilityAndSharing;

public enum PermissionLevel {
    VIEW_ONLY, COLLABORATIVE
}
