package VisibilityAndSharing;

public enum VisibilityType {
    PUBLIC, PRIVATE
}
